# workers-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: bonk_reviewer.md
.github/workflows/: cla.yml  lint.yml  new-pr-review.yml  release.yml  tests.yml
pywrangler-remote-worker/: .editorconfig  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
pywrangler-remote-worker/container_files/: pyproject.toml  pywrangler  wrangler.jsonc
pywrangler-remote-worker/src/: index.ts
pywrangler-remote-worker/test/: index.spec.ts
scripts/: compare_pyodide_index.py
signatures/version1/: cla.json
src/pywrangler/: cli.py  sync.py  types.py  utils.py
tests/: test_cli.py  test_types.py  test_utils.py  test_version_sync.py
